--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "typescript-eslint-parser",
-  "description": "An Esprima-style parser for TypeScript",
-  "author": "Nicholas C. Zakas <nicholas+npm@nczconsulting.com>",
-  "homepage": "https://github.com/eslint/typescript-eslint-parser",
+  "name": "typescript-eslint-parser-fork",
+  "description": "Fork of eslint/typescript-eslint-parser",
   "main": "parser.js",
-  "version": "9.0.0",
+  "version": "0.0.1",
   "files": [
     "lib",
     "parser.js"
