--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "typescript-eslint-parser-fork",
   "description": "Fork of eslint/typescript-eslint-parser",
   "main": "parser.js",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.1",
   "files": [
     "lib",
     "parser.js"
